--- a/index.html
+++ b/index.html
@@ -1,73 +1,96 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/reset.css"/>
-    <link rel="stylesheet" href="assets/css/general.css"/>
-    <link rel="stylesheet" href="assets/css/filtermenu.css"/>
-    <link rel="stylesheet" href="assets/css/home.css"/>
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/general.css" />
+    <link rel="stylesheet" href="assets/css/sidemenu.css" />
+    <link rel="stylesheet" href="assets/css/home.css" />
     <title>Home</title>
 </head>
+
 <body>
 
-<header>
-    <div>
-        <div class="filtermenu"></div>
-        <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
-        <label for="openSidebarMenu" class="sidebarIconToggle">
-            <div class="spinner diagonal part-1"></div>
-            <div class="spinner horizontal"></div>
-            <div class="spinner diagonal part-2"></div>
-        </label>
-        <div id="sidebarMenu">
+    <header>
+        <div class="sidebar">
         </div>
-    </div>
 
-    <p>Home</p>
-    <p><a href="index.html">Jarno Vandeburie</a></p>
-</header>
+        <p>Home</p>
+        <p><a href="index.html">Jarno Vandeburie</a></p>
+    </header>
 
-<main>
-    <section>
-        <div>
-            <h1>Over mij</h1>
-            <p>Ik ben Jarno Vandeburie, geboren op 2 januari 2001, en ik ben samen met mijn 2 jongere broers groot gebracht in Zwevegem, West-Vlaanderen.</p>
-            <p>In mijn vrije tijd hou ik van gaming en streaming. Op mijn 16e verjaardag heb ik een gitaar gekocht en op mijn 21ste ook een digitale piano.</p>
-            <p>Qua persoonlijkheid ben ik eerder wat terughoudend, al durf ik wel op te staan als ik het gevoel heb dat er iets niet juist is. Ik ben ook niet echt een fuifbeest, een leuke film- of gameavond met vrienden doet mij meer plezier.</p>
-        </div>
-        <img src="assets/images/over-mij.png" alt="">
-    </section>
+    <main>
+        <section>
+            <div>
+                <h1>Over mij</h1>
+                <p>Ik ben Jarno Vandeburie, geboren op 2 januari 2001, en ik ben samen met mijn 2 jongere broers groot
+                    gebracht in Zwevegem, West-Vlaanderen.</p>
+                <p>In mijn vrije tijd hou ik van gaming en streaming. Op mijn 16e verjaardag heb ik een gitaar gekocht
+                    en op mijn 21ste ook een digitale piano.</p>
+                <p>Qua persoonlijkheid ben ik eerder wat terughoudend, al durf ik wel op te staan als ik het gevoel heb
+                    dat er iets niet juist is. Ik ben ook niet echt een fuifbeest, een leuke film- of gameavond met
+                    vrienden doet mij meer plezier.</p>
+            </div>
+            <img src="assets/images/over-mij.png" alt="">
+        </section>
 
-    <section class="reverse">
-        <div>
-            <h1>Studies</h1>
-            <p>In het secundair ben ik begon in de richting Latijn in het Rhizo College van Zwevegem, maar al snel merkte ik dat dit niets voor mij was en zette ik de stap naar Moderne Wetenschappen. Twee jaar later was de keuze voor Wiskunde Wetenschappen snel gemaakt want wiskunde sprak mij veel meer aan dan economie</p>
-            <p>Toen ik in het 5e secundair naar het Guldensportencollege Kaai in Kortrijk trok, besloot ik dat ik me meer wou verdiepen in de informatica en ben ik Informaticabeheer beginnen te studeren. Dit was een richting die mij direct lag en boeide.</p>
-            <p>Nadat ik die studies had afgerond besloot ik om verder te studeren. In Howest Brugge sprak de richting Toegepaste Informatica mij hard aan. Na een eerste opleidingsjaar om de basis te leren, moest ik nog een keuze maken. Ik twijfelde heel hard tussen Software Engineer en Cyber Security Professional, maar ik koos uiteindelijk voor Cyber Security.</p>
-            <p>Na de studie in Howest bleef ik met een knagend gevoel zitten omdat ik mij afvroeg hoe ik het in de richting Software Development gedaan zou hebben. Daarom heb ik besloten om in Vives Kortrijk een verkort traject te volgen in Applicatieontwikkeling.</p>
-        </div>
-        <img src="assets/images/studies.png" alt="">
-    </section>
+        <section class="reverse">
+            <div>
+                <h1>Studies</h1>
+                <p>In het secundair ben ik begon in de richting Latijn in het Rhizo College van Zwevegem, maar al snel
+                    merkte ik dat dit niets voor mij was en zette ik de stap naar Moderne Wetenschappen. Twee jaar later
+                    was de keuze voor Wiskunde Wetenschappen snel gemaakt want wiskunde sprak mij veel meer aan dan
+                    economie</p>
+                <p>Toen ik in het 5e secundair naar het Guldensportencollege Kaai in Kortrijk trok, besloot ik dat ik me
+                    meer wou verdiepen in de informatica en ben ik Informaticabeheer beginnen te studeren. Dit was een
+                    richting die mij direct lag en boeide.</p>
+                <p>Nadat ik die studies had afgerond besloot ik om verder te studeren. In Howest Brugge sprak de
+                    richting Toegepaste Informatica mij hard aan. Na een eerste opleidingsjaar om de basis te leren,
+                    moest ik nog een keuze maken. Ik twijfelde heel hard tussen Software Engineer en Cyber Security
+                    Professional, maar ik koos uiteindelijk voor Cyber Security.</p>
+                <p>Na de studie in Howest bleef ik met een knagend gevoel zitten omdat ik mij afvroeg hoe ik het in de
+                    richting Software Development gedaan zou hebben. Daarom heb ik besloten om in Vives Kortrijk een
+                    verkort traject te volgen in Applicatieontwikkeling.</p>
+            </div>
+            <img src="assets/images/studies.png" alt="">
+        </section>
 
-    <section>
-        <div>
-            <h1>Ervaringen</h1>
-            <h2>Stages</h2>
-            <p>Mijn eerste stage heb ik gevolgd bij <a href="https://exsited.be" target="_blank">Exsited</a>. Hier heb ik voornamelijk geholpen bij het aanpassen van bestaande websites, maar ook het maken van een website aan de hand van een Adobe XD template die was opgesteld door de designer</p>
-            <p>Hierna volgde ik stage bij <a href="https://www.sofatech.be/nl/home" target="_blank">Sofatech</a> in Houthulst, West-Vlaanderen. Hier ben ik aangesteld voor de optimalisatie van de tools die gebruikt worden om alles te monitoren. Mijn hoofdtaak was de Zabbix en Grafana loskoppelen van de Docker waarop ze draaiden. Deze plaatste ik op een lokale Linux server en updatte naar de nieuwste LTS versie.</p>
-            <h2>Vakantiejobs</h2>
-            <p>Op mijn 16e ging opdienen in <a href="https://www.uilenspiegel-zwevegem.be" target="_blank">De Uilenspiegel</a>. Ik heb dit een aantal maanden gedaan in de weekends en ook op weekdagen tijdens lesvrije weken.</p>
-            <p>In de zomer heb ik een maand bij Bemoran BVBA gewerkt. Dit is een bedrijf in de bouw gespecialiseerd in zaken zoals terassen, voetpaden, parkings... Dit was fysiek een heel zware maand want ik had het toch een beetje onderschat. Door de combinatie van het lange, harde werk en de temperatuur die tot 35°C steeg, was ik toch opgelucht als de werkdag voorbij was.</p>
-            <p>Als laatste vakantiejob heb ik in het <a href="https://www.azgroeninge.be/nl" target="_blank">AZ Groeninge</a> van Kortrijk gewerkt. Als ik de ochtendshift had, dan begon mijn dag met het klaarmaken van de maaltijden aan een lopende band. De eerste dag was ik heel hard geschrokken van de snelheid waarmee ik mijn portie van de maaltijden op het bord moest leggen, maar na een aantal dagen begon dit beter te gaan en kon ik gemakkelijker volgen.</p>
-        </div>
-        <img src="assets/images/ervaringen.png" alt="">
-    </section>
-</main>
+        <section>
+            <div>
+                <h1>Ervaringen</h1>
+                <h2>Stages</h2>
+                <p>Mijn eerste stage heb ik gevolgd bij <a href="https://exsited.be" target="_blank">Exsited</a>. Hier
+                    heb ik voornamelijk geholpen bij het aanpassen van bestaande websites, maar ook het maken van een
+                    website aan de hand van een Adobe XD template die was opgesteld door de designer</p>
+                <p>Hierna volgde ik stage bij <a href="https://www.sofatech.be/nl/home" target="_blank">Sofatech</a> in
+                    Houthulst, West-Vlaanderen. Hier ben ik aangesteld voor de optimalisatie van de tools die gebruikt
+                    worden om alles te monitoren. Mijn hoofdtaak was de Zabbix en Grafana loskoppelen van de Docker
+                    waarop ze draaiden. Deze plaatste ik op een lokale Linux server en updatte naar de nieuwste LTS
+                    versie.</p>
+                <h2>Vakantiejobs</h2>
+                <p>Op mijn 16e ging opdienen in <a href="https://www.uilenspiegel-zwevegem.be" target="_blank">De
+                        Uilenspiegel</a>. Ik heb dit een aantal maanden gedaan in de weekends en ook op weekdagen
+                    tijdens lesvrije weken.</p>
+                <p>In de zomer heb ik een maand bij Bemoran BVBA gewerkt. Dit is een bedrijf in de bouw gespecialiseerd
+                    in zaken zoals terassen, voetpaden, parkings... Dit was fysiek een heel zware maand want ik had het
+                    toch een beetje onderschat. Door de combinatie van het lange, harde werk en de temperatuur die tot
+                    35°C steeg, was ik toch opgelucht als de werkdag voorbij was.</p>
+                <p>Als laatste vakantiejob heb ik in het <a href="https://www.azgroeninge.be/nl" target="_blank">AZ
+                        Groeninge</a> van Kortrijk gewerkt. Als ik de ochtendshift had, dan begon mijn dag met het
+                    klaarmaken van de maaltijden aan een lopende band. De eerste dag was ik heel hard geschrokken van de
+                    snelheid waarmee ik mijn portie van de maaltijden op het bord moest leggen, maar na een aantal dagen
+                    begon dit beter te gaan en kon ik gemakkelijker volgen.</p>
+            </div>
+            <img src="assets/images/ervaringen.png" alt="">
+        </section>
+    </main>
 
-<script src="assets/javascript/generateSidebarMenu.js"></script>
-<script src="assets/javascript/require.js"></script>
+    <script src="assets/javascript/sidemenu.js"></script>
+    <script src="assets/javascript/require.js"></script>
 </body>
+
 </html>
