--- a/info_artikel.html
+++ b/info_artikel.html
@@ -1,45 +1,39 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/reset.css"/>
-    <link rel="stylesheet" href="assets/css/general.css"/>
-    <link rel="stylesheet" href="assets/css/articles.css"/>
-    <link rel="stylesheet" href="assets/css/filtermenu.css"/>
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/general.css" />
+    <link rel="stylesheet" href="assets/css/articles.css" />
+    <link rel="stylesheet" href="assets/css/sidemenu.css" />
     <title id="pagetitle"></title>
 </head>
+
 <body>
 
-<header>
-    <div>
-        <div class="filtermenu"></div>
-        <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
-        <label for="openSidebarMenu" class="sidebarIconToggle">
-            <div class="spinner diagonal part-1"></div>
-            <div class="spinner horizontal"></div>
-            <div class="spinner diagonal part-2"></div>
-        </label>
-        <div id="sidebarMenu">
+    <header>
+        <div class="sidebar">
         </div>
-    </div>
 
-    <p><a href="index.html">Jarno Vandeburie</a></p>
-</header>
+        <p><a href="index.html">Jarno Vandeburie</a></p>
+    </header>
 
-<main>
-    <section id="back">
-        <a href="artikelen.html">Terug</a>
-    </section>
-    <section id="article">
+    <main>
+        <section id="back">
+            <a href="artikelen.html">Terug</a>
+        </section>
+        <section id="article">
 
-    </section>
-</main>
+        </section>
+    </main>
 
-<script src="assets/javascript/generateSidebarMenu.js"></script>
-<script src="assets/javascript/displayArticle.js"></script>
-<script src="assets/javascript/require.js"></script>
+    <script src="assets/javascript/sidemenu.js"></script>
+    <script src="assets/javascript/displayArticle.js"></script>
+    <script src="assets/javascript/require.js"></script>
 </body>
+
 </html>
